<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/vOne"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/light_blue" />

            <ImageView
                android:id="@+id/ivOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:layout_margin="@dimen/dp_10"/>

            <TextView
                android:id="@+id/tvOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:layout_toRightOf="@+id/ivOne"
                android:layout_margin="@dimen/dp_10"/>

            <EditText
                android:id="@+id/etOne"
                android:layout_width="match_parent"
                android:text="@string/email_text"
                android:textSize="@dimen/dp_15"
                android:layout_height="@dimen/dp_50"
                android:layout_below="@+id/ivOne"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginHorizontal="@dimen/dp_30"/>

            <EditText
                android:id="@+id/etTwo"
                android:layout_width="match_parent"
                android:text="@string/name_text"
                android:textSize="@dimen/dp_15"
                android:layout_height="@dimen/dp_50"
                android:layout_below="@+id/etOne"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginHorizontal="@dimen/dp_30"/>

            <EditText
                android:id="@+id/etThree"
                android:layout_width="match_parent"
                android:text="@string/password_text"
                android:textSize="@dimen/dp_15"
                android:layout_height="@dimen/dp_50"
                android:layout_below="@+id/etTwo"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginHorizontal="@dimen/dp_30"/>

            <TextView
                android:id="@+id/tvTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="USE PHONE NUMBER"
                android:layout_below="@+id/etThree"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_20"
                android:textColor="@color/light_blue"/>

            <Button
                android:id="@+id/btOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:background="@drawable/btnbgone"
                android:layout_below="@+id/tvTwo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_30"
                android:textAllCaps="false"
                android:text="@string/sign_up"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:layout_below="@+id/btOne"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_30"/>

            <Button
                android:id="@+id/btTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:background="@drawable/btnbgtwo"
                android:layout_below="@+id/tvThree"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_30"
                android:drawableStart="@drawable/facebook"
                android:paddingLeft="@dimen/dp_30"
                android:paddingRight="@dimen/dp_30"
                android:text="@string/facebook_button_text"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:background="@drawable/btnbgthree"
                android:layout_below="@+id/btTwo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_20"
                android:drawableStart="@drawable/google"
                android:paddingLeft="@dimen/dp_30"
                android:paddingRight="@dimen/dp_30"
                android:text="@string/google_button_text"
                android:textColor="@color/black"/>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>